Avoid overflow

--- a/src/ui/styles/map.css
+++ b/src/ui/styles/map.css
@@ -22,7 +22,7 @@ slay-map {
 
 	box-sizing: border-box;
 	display: grid;
-	margin: 1rem;
+	margin: 0;
 	min-height: 125vh;
 	padding: 1em;
 	position: relative;
